--- a/nosotros.html
+++ b/nosotros.html
@@ -3,84 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros - Mi Empresa</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
-        }
-        header {
-            background-color: #0056b3;
-            color: white;
-            padding: 20px 0;
-            margin-bottom: 20px;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        h1 {
-            color: white;
-        }
-        h2 {
-            color: #0056b3;
-        }
-        p {
-            line-height: 1.6;
-            text-align: justify;
-            margin-bottom: 15px;
-        }
-        .mission {
-            border-left: 5px solid #ff9900;
-            padding-left: 15px;
-            margin-top: 20px;
-            font-style: italic;
-        }
-        footer {
-            margin-top: 30px;
-            padding: 10px 0;
-            background-color: #333;
-            color: white;
-            font-size: 0.9em;
-        }
-    </style>
+    <title>Proyecto Colaborativo - Nosotros</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <header>
-        <h1>Nosotros</h1>
-        <p>Conoce nuestra historia y misión</p>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </div>
+        </div>
+    </div>
+    </nav>
+
+    <header class="hero hero--about bg-light text-center py-5">
+        <div class="container">
+            <h1 class="hero__title display-4">Nuestra Historia</h1>
+            <p class="hero__subtitle lead">Conectando talento humano con soluciones digitales.</p>
+        </div>
     </header>
 
-    <div class="container">
-        <h2>Nuestra Historia</h2>
-        <p>
-            Fundada en el año 2020, nuestra empresa nació de la pasión por la innovación y el deseo de ofrecer soluciones de alta calidad en el mercado tecnológico. Lo que comenzó como un pequeño equipo de tres personas en un garaje, rápidamente creció hasta convertirse en un referente en el sector gracias a nuestro compromiso inquebrantable con la excelencia y la satisfacción del cliente.
-        </p>
+    <main class="container my-5">
+        
+        <section class="about-section row align-items-center mb-5">
+            <div class="col-md-6">
+                <h2 class="about-section__title text-primary">¿Cómo empezamos?</h2>
+                <p class="about-section__text">
+                    Fundada en el año 2020, nacimos de la pasión por la innovación. Lo que comenzó como un pequeño equipo de tres personas (como nosotros ahora), creció gracias al compromiso con la excelencia.
+                </p>
+                <div class="alert alert-info" role="alert">
+                    <h4 class="alert-heading">💡 Nota para el equipo:</h4>
+                    <p>Recordemos que <strong>todo experto fue alguna vez un principiante</strong>. No se frustren si el código no funciona a la primera; la depuración es parte del camino del héroe en la programación.</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="p-5 bg-secondary text-white rounded text-center">
+                    <img src="https://i.pinimg.com/736x/3b/19/25/3b1925284e5245c452093c17c9611dc2.jpg" alt="">
+                </div>
+            </div>
+        </section>
 
-        <h2>Nuestra Misión</h2>
-        <p class="mission">
-            "Capacitar a individuos y empresas para alcanzar su máximo potencial a través de tecnología accesible, sostenible y de vanguardia."
-        </p>
+    </main>
 
-        <h2>Nuestro Equipo</h2>
-        <p>
-            Creemos que nuestro mayor activo es nuestro equipo. Contamos con profesionales altamente calificados y motivados, cada uno experto en su campo, que trabajan juntos para transformar ideas en realidad. Fomentamos una cultura de colaboración, respeto y aprendizaje continuo.
-        </p>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Mi Empresa. Todos los derechos reservados.</p>
+    <footer class="bg-dark text-white text-center py-3 mt-auto">
+        <p>&copy; 2025 Proyecto Colaborativo. Hecho con esfuerzo y aprendizaje.</p>
     </footer>
 
-</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script></body>
 </html>
